Material Shader Crashes Cycles #60597

Closed
opened 2019-01-17 20:23:30 +01:00 by Nicolas Jarraud · 6 comments

System Information
Operating system: MacOs 10.13.2, Ubuntu 16.04
Graphics card: Ubuntu with GTX 1050Ti

Blender Version
Broken: blender 2.80 e57ee5934a
Worked: blender 2.79 0260d7b726

Short description of error
Blender 2.80 crashes while trying to render any objects having this material shader.testCrash.blend

Exact steps for others to reproduce the error
Run blend file attached.

  • Any node or link removal will make the shader work. I could not simplify the shader more to make Blender crash.
  • Node input values do not have any impact to the exception of Subsurface of any of the bottom three Principled BSDF nodes. Subsurface input of at least one of them must be above 0.847 to make it crash.
**System Information** Operating system: MacOs 10.13.2, Ubuntu 16.04 Graphics card: Ubuntu with GTX 1050Ti **Blender Version** Broken: blender 2.80 e57ee5934a30 Worked: blender 2.79 0260d7b72672 **Short description of error** Blender 2.80 crashes while trying to render any objects having this material shader.[testCrash.blend](https://archive.blender.org/developer/F6320210/testCrash.blend) **Exact steps for others to reproduce the error** Run blend file attached. - Any node or link removal will make the shader work. I could not simplify the shader more to make Blender crash. - Node input values do not have any impact to the exception of **Subsurface** of any of the bottom three Principled BSDF nodes. Subsurface input of at least one of them must be above 0.847 to make it crash.

Added subscriber: @Scrubs

Added subscriber: @Scrubs
Member

Added subscribers: @brecht, @lichtwerk

Added subscribers: @brecht, @lichtwerk
Brecht Van Lommel was assigned by Philipp Oeser 2019-01-18 10:40:44 +01:00
Member

Can confirm crash in current buildbot (7c438e536), cant get it to crash in a Debug build though (both 7c438e536 and 72b9ab5a22)...

(note: file also crashes on open in current buildbot for me -- if I open in a Debug build, change GPU to CPU, save again then it opens fine in buildbot [but crashes on render then...])

Not sure whats going on here, maybe @brecht can take a look?

Can confirm crash in current buildbot (7c438e536), cant get it to crash in a Debug build though (both 7c438e536 and 72b9ab5a22)... (note: file also crashes on open in current buildbot for me -- if I open in a Debug build, change GPU to CPU, save again then it opens fine in buildbot [but crashes on render then...]) Not sure whats going on here, maybe @brecht can take a look?

This issue was referenced by blender/cycles@3f5cbac544

This issue was referenced by blender/cycles@3f5cbac544cfc5420e81fb1234aef0a8e3147079

This issue was referenced by 6260b3c15e

This issue was referenced by 6260b3c15e5afd0a38c97a16d47665833f69a79f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60597
No description provided.