Fix T60597, T60806: Cycles crash rendering principled BSDF + volume interior.

The integrator maximum number of closures was not set properly for the CPU/mega
kernels to match the actual available memory. Before relatively recent code
refactoring we did not use this value in those kernels so it worked fine.